tolist() in Repo